--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <script src="../p5.js"></script>
-        <script src="../p5.dom.min.js"></script>
-        <script src="sketch.js"></script>
+        <script src="p5/p5.js"></script>
+        <script src="p5/p5.dom.min.js"></script>
+        <script src="p5/first/sketch.js"></script>
         <style>
         body{
             background-color: #AAAAAA;
